Fixed custom cell

--- a/Hideous/Hideous/Base.lproj/Main.storyboard
+++ b/Hideous/Hideous/Base.lproj/Main.storyboard
@@ -10,10 +10,11 @@
         <scene sceneID="QaC-Uk-EXJ">
             <objects>
                 <tabBarController id="Fya-ji-iIe" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="xCF-j5-ph2">
+                    <navigationItem key="navigationItem" id="1DL-hG-39C"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" barStyle="black" id="xCF-j5-ph2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                     </tabBar>
                     <connections>
                         <segue destination="5lV-Lt-33I" kind="relationship" relationship="viewControllers" id="Qc2-1E-uS2"/>
@@ -26,10 +27,10 @@
             </objects>
             <point key="canvasLocation" x="-814" y="552"/>
         </scene>
-        <!--Item-->
+        <!--Top20-->
         <scene sceneID="35C-s2-6Oa">
             <objects>
-                <tableViewController id="5lV-Lt-33I" customClass="Top20TableViewController" customModule="Hideous" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Top20" id="5lV-Lt-33I" customClass="Top20TableViewController" customModule="Hideous" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" sectionHeaderHeight="28" sectionFooterHeight="28" id="YeP-mt-USe">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -115,9 +116,9 @@
                             </tableViewCell>
                         </prototypes>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Item" id="piI-oV-cS6"/>
+                    <tabBarItem key="tabBarItem" title="Top 20" id="piI-oV-cS6"/>
                     <connections>
-                        <segue destination="8BI-1w-nfb" kind="show" id="gu9-QJ-nvg"/>
+                        <segue destination="8BI-1w-nfb" kind="show" identifier="Top20" id="gu9-QJ-nvg"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3PD-Gs-mb5" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -142,16 +143,16 @@
             </objects>
             <point key="canvasLocation" x="1084" y="-241"/>
         </scene>
-        <!--Item-->
+        <!--Bottom20-->
         <scene sceneID="Ifs-Kf-Hpf">
             <objects>
-                <tableViewController id="Jit-cS-oU0" sceneMemberID="viewController">
+                <tableViewController title="Bottom20" id="Jit-cS-oU0" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Lwr-12-gAN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="6TQ-jQ-zoQ">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="6TQ-jQ-zoQ">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6TQ-jQ-zoQ" id="aaX-8X-bda">
@@ -165,22 +166,22 @@
                             <outlet property="delegate" destination="Jit-cS-oU0" id="mfV-oR-4Gb"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Item" id="JmB-Ye-xIi"/>
+                    <tabBarItem key="tabBarItem" title="Bottom 20" id="JmB-Ye-xIi"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Uh-Zr-k8g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="262" y="417"/>
         </scene>
-        <!--Item-->
+        <!--Full list-->
         <scene sceneID="myd-zG-yQf">
             <objects>
-                <tableViewController id="ZyS-1k-IQa" sceneMemberID="viewController">
+                <tableViewController title="Full list" id="ZyS-1k-IQa" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="W2u-nf-VI0">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="ovn-Vg-Qyj">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="ovn-Vg-Qyj">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ovn-Vg-Qyj" id="haE-aj-vea">
@@ -194,13 +195,13 @@
                             <outlet property="delegate" destination="ZyS-1k-IQa" id="V5l-z8-A2m"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Item" id="xIb-Mc-0kA"/>
+                    <tabBarItem key="tabBarItem" title="Full list" id="xIb-Mc-0kA"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q3h-Vm-4M7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="262" y="1077"/>
         </scene>
-        <!--Item-->
+        <!--My Cars-->
         <scene sceneID="P38-bu-UhE">
             <objects>
                 <viewController id="LhO-So-Mji" sceneMemberID="viewController">
@@ -213,7 +214,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="N6w-zp-wmu"/>
+                    <tabBarItem key="tabBarItem" title="My Cars" id="N6w-zp-wmu"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HqC-am-uZx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
