--- a/Hideous/Hideous/Base.lproj/Main.storyboard
+++ b/Hideous/Hideous/Base.lproj/Main.storyboard
@@ -6,11 +6,13 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Tab Bar Controller-->
+        <!--Hideous-->
         <scene sceneID="QaC-Uk-EXJ">
             <objects>
-                <tabBarController id="Fya-ji-iIe" sceneMemberID="viewController">
+                <tabBarController title="Hideous" id="Fya-ji-iIe" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="1DL-hG-39C"/>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" barStyle="black" id="xCF-j5-ph2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -86,13 +88,6 @@
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="_\*Gebruiker_112*/_" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cjr-cX-6z1">
-                                            <frame key="frameInset" minX="111" minY="30" width="251" height="21"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="223" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LyT-rO-CCo">
                                             <frame key="frameInset" minX="259" minY="59" width="103" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -111,7 +106,6 @@
                                     <outlet property="autoImageView" destination="ZNt-Go-9Cu" id="161-19-bNk"/>
                                     <outlet property="autoNaamLabel" destination="STn-2f-QQQ" id="sNh-Zb-z0i"/>
                                     <outlet property="beoordelingLabel" destination="ZN4-Uj-qVf" id="0mN-32-Zny"/>
-                                    <outlet property="gebruikerNaamLabel" destination="cjr-cX-6z1" id="WJf-ca-c8N"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -141,7 +135,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NQ1-nM-qRw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1084" y="-241"/>
+            <point key="canvasLocation" x="1031" y="-236"/>
         </scene>
         <!--Bottom20-->
         <scene sceneID="Ifs-Kf-Hpf">
