--- a/Hideous/Hideous/Base.lproj/LaunchScreen.storyboard
+++ b/Hideous/Hideous/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,12 +17,29 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hideous-logo" translatesAutoresizingMaskIntoConstraints="NO" id="YZX-FY-hFz">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="IBQ-6g-OfO"/>
+                                    <constraint firstAttribute="height" constant="128" id="a7E-Rj-7KA"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="YZX-FY-hFz" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="4ss-r2-MuP"/>
+                            <constraint firstItem="YZX-FY-hFz" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="RId-Vs-P0f"/>
+                            <constraint firstItem="YZX-FY-hFz" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Z38-pt-e9F"/>
+                            <constraint firstItem="YZX-FY-hFz" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="rz0-GG-Wke"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="hideous-logo" width="366" height="110"/>
+    </resources>
 </document>
